Add main resources
